package utils;


public class ConsoleColor {
    public static final String MORADO = "\u001B[35m";
    public static final String VERDE = "\u001B[32m";
    public static final String AMARILLO = "\u001B[33m";
    public static final String AZUL = "\u001B[34m";
    public static final String ROJO = "\u001B[31m";
    public static final String CYAN = "\u001B[36m";
    public static final String RESET = "\u001B[0m";

    public static final String BLACK = "\u001B[30m";
    public static final String WHITE = "\u001B[97m";

    public static final String BG_MORADO = "\033[48;2;71;73;115m";
    public static final String BG_BEIGE = "\033[48;2;166;156;172m";
    public static final String BG_BLACK = "\033[48;2;0;0;0m";
}
